# aas-benchmark

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: workflow.yml
aas-benchmark/: Cargo.toml
aas-benchmark/src/: cli.rs  generate.rs  match_algorithm.rs  pattern.rs
aas-benchmark/src/algorithms/: mod.rs
aas-benchmark/src/measure/: measurement.rs  mod.rs
benchmark-lists/: Cargo.toml
benchmark-lists/src/: aslice.rs  lib.rs
docs/: search-index.js  settings.html  source-files.js
docs/aas_benchmark/: all.html  fn.main.html  index.html  sidebar-items.js
docs/aas_benchmark/algorithms/: index.html  sidebar-items.js
docs/aas_benchmark/cli/: fn.none.html  fn.only.html  fn.only_one.html  index.html  sidebar-items.js  struct.CLIParams.html
docs/aas_benchmark/generate/: fn.gen_rand_bytes.html  fn.rand_pattern_from_bytes.html  index.html  sidebar-items.js
docs/aas_benchmark/match_algorithm/: fn.algorithm_name.html  fn.match_algorithm.html  fn.match_algorithms.html  index.html  sidebar-items.js  struct.ALGORITHMS.html  type.Algorithm.html
docs/aas_benchmark/measure/: fn.calculate_avg_duration.html  fn.measure.html  fn.measure_multiple.html  fn.measure_multiple_different_patterns.html  index.html  sidebar-items.js
docs/aas_benchmark/text/: index.html  (+5 more)
report/: .gitignore  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc
report/assets/: output_format_example.csv
src/: cli.rs  cli.yml  count_accesses.rs  count_comparisons.rs  generate.rs  main.rs  match_algorithm.rs  measure.rs  pattern.rs  range.rs  text.rs  utils.rs
src/algorithms/: dfa.rs  mod.rs
src/measure/: csv_record.rs  measure_result.rs  measurement.rs  measurement_result.rs  mod.rs
(+130 files in other folders)
