[package]
name = "aas-benchmark"
version = "0.1.1"
authors = ["Alexander Korn <a@lxnd.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
csv = "1.1.3"
lazy_static = "1.4.0"
rand = "0.7"
regex = "1"
serde = {version = "1.0.117", features = ["derive"]}

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
