[package]
name = "aas-benchmark"
version = "0.4.2"
authors = ["Alexander Korn <dev@lxnd.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.20.1"
clap = {version = "2.33.3", features = ["yaml"]}
csv = "1.1.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
rand = "0.7"
regex = "1"
serde = {version = "1.0.117", features = ["derive"]}
funty = "=1.1.0"

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
